objects/ssot__RegulatoryAuthorizationType__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationType__c</fullName>
        <label>Duration Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulatory Authorization Type Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuingDepartmentId__c</fullName>
        <label>Issuing Department</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JurisdictionName__c</fullName>
        <label>Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessingDurationText__c</fullName>
        <label>Processing Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryAuthCategory__c</fullName>
        <label>Regulatory Authorization Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryAuthCode__c</fullName>
        <label>Regulatory Authorization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512792778_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryAuthorizationType_IssuingD_rel</label>
        <referenceTo>ssot__RegulatoryAuthority__dlm</referenceTo>
        <relationshipLabel>RegulatoryAuthorizationType_IssuingD_rel</relationshipLabel>
        <relationshipName>rel_1739512792778_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>